fix some browser stuck loading bug

--- a/style.css
+++ b/style.css
@@ -140,7 +140,6 @@ img, button {
     height: 45px;
     top: 65vh;
     width: 45%;
-    left: ;
 
 }
 
